--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="icon" href="./assets/favicon.png ">
 
 
-  <title>IDE - DF</title>
+  <title>IDE-DF</title>
 </head>
 
 <body>
   <nav>
     <div class="logo">
       <img src="./assets/logo/df.png" alt="">
-      <h1>IDE - DF</h1>
+      <h1>IDE-DF</h1>
     </div> <!-- nav-logo -->
 
     <div class="nav-header">
@@ -32,7 +32,7 @@
     </div> <!-- nav-header -->
 
     <div class="geoPortal">
-      <h1>GeoPortal - DF
+      <h1>GeoPortal-DF
       </h1>
     </div> <!-- end geoPortal -->
   </nav> <!-- end nav -->
@@ -53,7 +53,7 @@
             <li class="navbar_lista"><a href="#">Legislação</a></li>
             <li class="navbar_lista"><a href="#">Comitê</a></li>
             <li class="navbar_lista"><a href="#">Capacitaçao</a></li>
-            <li class="navbar_lista"><a href="#">Adesão à IDE/DF</a></li>
+            <li class="navbar_lista"><a href="#">Adesão à IDE-DF</a></li>
             <li class="navbar_lista"><a href="#">Órgãos Participantes</a></li>
           </ul>
         </div> <!-- end nav-bar-menu -->
