Melhorias para tela Mobile

--- a/index.html
+++ b/index.html
@@ -507,7 +507,8 @@
   </div> <!-- end main -->
 
   <footer>
-    rodapé
+    <p>Infraestrutura de Dados Espaciais do Distrito Federal IDE-DF</p>
+    <p>Copyright © 2022 Equipe SEDUH-DF</p>
 
   </footer>
 
