Atualização de links

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="PT-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  <link rel="icon" href="./assets/favicon.png ">
-
+  <link rel="icon" href="./assets/favicon.png">
 
   <title>IDE-DF</title>
 </head>
@@ -21,20 +20,19 @@
 
     <div class="nav-header">
       <ul>
-        <li><a href="#">
-            <p>Transparência</p>
-          </a></li>
-        <li><a href="#">Ouvidoria</a></li>
-        <li><a href="#">Acesso à informação</a></li>
-        <li><a href="#">Diário Oficial</a></li>
-        <li><a href="#">Agência Brasília</a></li>
+        <li><a href="http://www.transparencia.df.gov.br/" target="_blank">Transparência</a></li>
+        <li><a href="http://www.ouvidoria.df.gov.br/" target="_blank">Ouvidoria</a></li>
+        <li><a href="http://www.brasilia.df.gov.br/category/acesso-a-informacao/" target="_blank">Acesso à
+            informação</a></li>
+        <li><a href="https://www.dodf.df.gov.br/" target="_blank">Diário Oficial</a></li>
+        <li><a href="https://www.agenciabrasilia.df.gov.br/" target="_blank">Agência Brasília</a></li>
       </ul>
     </div> <!-- nav-header -->
 
     <div class="geoPortal">
-      <h1>GeoPortal-DF
-      </h1>
+      <h1>GeoPortal-DF</h1>
     </div> <!-- end geoPortal -->
+
   </nav> <!-- end nav -->
 
   <div class="container">
