rename nas abas

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <div class="navbar-menu">
           <ul>
             <li class="navbar_lista active"><a href="#">Início</a></li>
-            <li class="navbar_lista"><a href="#">Sobre IDE-DF</a></li>
+            <li class="navbar_lista"><a href="#">Sobre</a></li>
             <li class="navbar_lista"><a href="#">Legislação</a></li>
             <li class="navbar_lista"><a href="#">Comitê</a></li>
             <li class="navbar_lista"><a href="#">Reuniao/ATA</a></li>
             <li class="navbar_lista"><a href="#">Capacitaçao</a></li>
-            <li class="navbar_lista"><a href="#">Adesão à IDE-DF</a></li>
-            <li class="navbar_lista"><a href="#">Órgãos Participantes</a></li>
+            <li class="navbar_lista"><a href="#">Adesão</a></li>
+            <li class="navbar_lista"><a href="#">Participantes</a></li>
           </ul>
         </div> <!-- end nav-bar-menu -->
       </div> <!-- end container-right -->
