textos das abas reunião/ata, capacitação, adesão

--- a/index.html
+++ b/index.html
@@ -438,12 +438,132 @@
         <div class="wrap-reuniao-ata">
           <div class="sumario">
             <details>
-              <summary>aquiii</summary>
+              <summary>ATA</summary>
               <div class="lista-sumario">
+                <ul>
+                  <p>ATA das reuniões</p>
+                  <li><a href="http://" target="_blank" rel="noopener noreferrer">ATA</a> - Reunião 03/08/2021</li>
+                  <li><a href="http://" target="_blank" rel="noopener noreferrer">ATA</a> - Reunião 16/08/2021</li>
+                  <li><a href="http://" target="_blank" rel="noopener noreferrer">ATA</a> - Reunião 30/08/2021</li>
+                  <li><a href="http://" target="_blank" rel="noopener noreferrer">ATA</a> - Reunião 13/09/2021</li>
+                  <li><a href="http://" target="_blank" rel="noopener noreferrer">ATA</a> - Reunião / /2021</li>
+                </ul>
+              </div> <!-- end lista-sumario -->
+            </details>            
+          </div> <!-- end sumario  -->
 
-              </div> <!-- end lista-sumario  -->
+          <div class="sumario">
+            <details>
+              <summary>Reuniões</summary>
+              <div class="lista-sumario">
+                <!-- <p>Reuniões</p> -->
+                <details>
+                  <summary>1ª Reunião Ordinária - 20/08/2020</summary>
+                  <ul>
+                    <li>1ª Reunião Ordinária - 20/08/2020</li>
+                    <li>2ª Reunião Ordinária - 16/09/2020</li>
+                    <li>3ª Reunião Ordinária - 25/09/2020</li>
+                    <li>4ª Reunião Ordinária - 02/10/2020</li>
+                    <li>5ª Reunião Ordinária - 16/10/2020</li>
+                    <li>6ª Reunião Ordinária - 19/11/2020</li>
+                    <li>7ª Reunião Ordinária - 26/11/2020</li>
+                    <li>8ª Reunião Ordinária - 05/04/2021</li>
+                    <li>9ª Reunião Ordinária - 08/07/2021</li>
+                  </ul>
+                </details>
+
+                <details>
+                  <summary>2ª Reunião Ordinária - 16/09/2020</summary>
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </details>
+
+                <details>
+                  <summary>3ª Reunião Ordinária - 25/09/2020</summary>
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </details>
+
+                <details>
+                  <summary>4ª Reunião Ordinária - 02/10/2020</summary>
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </details>
+
+                <details>
+                  <summary>5ª Reunião Ordinária - 16/10/2020</summary>
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </details>
+
+                <details>
+                  <summary>6ª Reunião Ordinária - 19/11/2020</summary>
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </details>
+
+                <details>
+                  <summary>7ª Reunião Ordinária - 26/11/2020</summary>
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </details>
+
+                <details>
+                  <summary>8ª Reunião Ordinária - 05/04/2021</summary>
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </details>
+
+                <details>
+                  <summary>9ª Reunião Ordinária - 08/07/2021</summary>
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </details>
+
+              </div> <!-- end lista-sumario -->
             </details>
           </div> <!-- end sumario  -->
+
         </div> <!-- end wrap-reuniao-ata  -->
       </div> <!-- end section  -->
     </section>
