--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
               <li class="lista-lateral"><a
                   href="https://www.ibram.df.gov.br/observatorio-da-natureza-e-desempenho-ambiental-onda/" target="_blank" rel="noopener noreferrer">ONDA
                   IBRAM</a></li>
+                  <li class="lista-lateral"><a href="https://www.caesb.df.gov.br/" target="_blank" rel="noopener noreferrer">CAESB</a></li>
               <li class="lista-lateral"><a href="https://sisdia.df.gov.br/home/" target="_blank" rel="noopener noreferrer">SISDIA</a></li>
-              <li class="lista-lateral"><a href="https://www.caesb.df.gov.br/" target="_blank" rel="noopener noreferrer">CAESB</a></li>
             </ul>
           </div> <!-- end wrap-section-right  -->
         </div> <!-- end wrap-inicio  -->
@@ -99,6 +99,8 @@
             <div class="apoio"> <img src="./assets/logo/sema.png" alt="SEMA"> </div>
             <div class="apoio"> <img src="./assets/logo/slu.jpg" alt="SLU"> </div>
             <div class="apoio"> <img src="./assets/logo/terracap.jpg" alt="TERRACAP"> </div>
+            <div class="apoio"> <img src="./assets/logo/SEAGRI.png" alt="SEAGRI"> </div>
+            <div class="apoio"> <img src="./assets/logo/bombeiros-df.png" alt="BOMBEIROS"> </div>
           </div> <!-- wrap-apoio -->
         </div> <!-- orgaos-participantes -->
 
@@ -175,7 +177,7 @@
             <details>
               <summary>Governança da IDE / DF</summary>
               <div class="lista-sumario">
-                A IDE/DF é formada por:
+                <span>A IDE/DF é formada por:</span>
                 <ul>
                     <li>
                       <p>Estrutura Tecnológica</p>
@@ -248,8 +250,8 @@
       <div class="section">
         <div class="wrap-legislacao">
           <div class="sumario">
-            <details>
-              <summary>Legislação</summary>
+            <!-- <details> -->
+              <!-- <summary>Legislação</summary> -->
               <div class="lista-sumario">
                 <ul>
                   <li><a href="#">DECRETO Nº 40.554</a>, DE 23 DE MARÇO DE 2020 - Dispõe sobre a instituição da
@@ -264,8 +266,8 @@
                     da Infraestrutura de Dados Espaciais do Distrito Federal – IDE/DF.</li>
                 </ul>
               </div> <!-- end lista-sumario -->
-            </details>
-          </div> <!-- end sumario -->
+            <!-- </details> -->
+          <!-- </div> <!-- end sumario -->
         </div> <!-- end wrap-legislacao -->
     </section>
 
@@ -299,9 +301,9 @@
             <details>
               <summary>Governança da IDE / DF</summary>
               <div class="lista-sumario">
-                A IDE/DF é formada por:
+                <span> IDE/DF é formada por:</span>
                 <ul>
-                    <li>
+                  <li>
                       <p>Estrutura Tecnológica</p>
                       A estrutura tecnológica da IDE/DF é constituída por:
                       Conjunto de bancos e servidores de dados, geoserviços e de metadados de cada entidade
@@ -369,55 +371,60 @@
             <details>
               <summary>Grupo técnico executivo</summary>
               <div class="lista-sumario">
-                MARCO LEGAL: Instituído pela Resolução nº 2 do CGEE/DF.
-                <br>
+                <span>MARCO LEGAL: </span>Instituído pela Resolução nº 2 do CGEE/DF.
                 <p>Grupo técnico executivo de organização de imagens aéreas do território do Distrito Federal</p>
-                <p>OBJETIVO: identificar as imagens de satélite, fotografias aéreas, 
+                <span>Objetivo:</span> identificar as imagens de satélite, fotografias aéreas, 
                   nuvens de pontos e outros arquivos matriciais relacionados existentes 
                   nos diferentes órgãos do Governo do Distrito Federal, centralizá-los 
-                  em um repositório digital e disponibilizá-las no âmbito da IDE/DF.</p>
-                INTEGRANTES:
+                  em um repositório digital e disponibilizá-las no âmbito da IDE/DF.
+                <p>Integrantes:</p>
                 <ul>
                     <li>
                       <p>Secretaria de Estado de Desenvolvimento Urbano e Habitação - SEDUH</p>
-                      Leonardo Rodrigues de Deus, matrícula n° 269.898-6, como titular;
-                      Alexandre Sauma da Silva, matrícula n° 275.285-9, como suplente;
+                      - Alexandre Sauma da Silva, matrícula n° 275.285-9, como suplente;
+                      <br>
+                      - Leonardo Rodrigues de Deus, matrícula n° 269.898-6, como titular;
                     </li>
                     <li>
-                      <p> - SEDUH</p>
-                      Guilherme Antônio Viana Ferreira Junior, matrícula n° 0277309-0, como titular;
-                      Josebias Tod Santos, matrícula n° 0278782-2, como suplente;
+                      <p>Secretaria de Estado de Economia do Distrito Federal - SEEC</p>
+                      - Guilherme Antônio Viana Ferreira Junior, matrícula n° 0277309-0, como titular;
+                      <bR>
+                      - Josebias Tod Santos, matrícula n° 0278782-2, como suplente;
                     </li>
                     <li>
                       <p>Secretaria de Estado de Meio Ambiente - SEMA</p>
-                      Mariana Santos da Silva, matrícula n° 275.145-3, como titular;
-                      Jéssica de Melo Rodrigues, matrícula n° 273.936-4, como suplente;
+                      - Mariana Santos da Silva, matrícula n° 275.145-3, como titular;
+                      <br>
+                      - Jéssica de Melo Rodrigues, matrícula n° 273.936-4, como suplente;
                     </li>
                     <li>
                       <p>Agência Reguladora de Águas e Saneamento - ADASA</p>
-                      Geraldo Alves Barcellos, matrícula n° 172.491-6, como titular;
-                      Welber Ferreira Alves, matrícula n° 198.239-7, como suplente;
+                      - Geraldo Alves Barcellos, matrícula n° 172.491-6, como titular;
+                      <br>
+                      - Welber Ferreira Alves, matrícula n° 198.239-7, como suplente;
                     </li>
                     <li>
                       <p>Companhia Imobiliária de Brasília - TERRACAP</p>
-                      Thiago dos Santos Nascimento, matrícula n° 2375-2, como titular;
-                      Ana Luiza Noce Cerdeira, matrícula n° 2789-8, como suplente;
+                      - Thiago dos Santos Nascimento, matrícula n° 2375-2, como titular;
+                      <br>
+                      - Ana Luiza Noce Cerdeira, matrícula n° 2789-8, como suplente;
                     </li>
                     <li>
                       <p>Companhia de Saneamento Ambiental do Distrito Federa - CAESB</p>
-                      Roberto Souza Borges, matrícula n° 53350-5, como titular;
-                      Carlos Eduardo Machado Pires, matrícula n° 51721-6, como suplente;
+                      - Roberto Souza Borges, matrícula n° 53350-5, como titular;
+                      <br>
+                      - Carlos Eduardo Machado Pires, matrícula n° 51721-6, como suplente;
                     </li>
                     <li>
                       <p>Instituto do Meio Ambiente e dos Recursos Hídricos do Distrito Federal - IBRAM</p>
-                      Guilhermino Silveira Rocha, matrícula n° 1689533-9, como titular;
-                      Luiz Antônio de Souza Aguiar, matrícula n° 264678-1, como suplente;
+                      - Guilhermino Silveira Rocha, matrícula n° 1689533-9, como titular;
+                      <br>
+                      - Luiz Antônio de Souza Aguiar, matrícula n° 264678-1, como suplente;
                     </li>
                     
                   </ul>
+                  <span>Atribuições</span>
                   <ul>
-                    <h3>ATRIBUIÇÕES</h3>
-
                     <li>Levantar, junto aos órgãos do Governo do Distrito Federal, a existência de imagens de satélite, fotografias aéreas, nuvens de pontos e outros arquivos matriciais relacionados do território do Distrito Federal, de qualquer data;</li>
                     <li>Definir local de armazenamento do repositório de imagens da IDE/DF;</li>
                     <li>Especificar os requisitos de hardware e software necessários para o servidor de imagens;</li>
@@ -441,7 +448,7 @@
               <summary>ATA</summary>
               <div class="lista-sumario">
                 <ul>
-                  <p>ATA das reuniões</p>
+                  <span>ATA das reuniões</span>
                   <li><a href="http://" target="_blank" rel="noopener noreferrer">ATA</a> - Reunião 03/08/2021</li>
                   <li><a href="http://" target="_blank" rel="noopener noreferrer">ATA</a> - Reunião 16/08/2021</li>
                   <li><a href="http://" target="_blank" rel="noopener noreferrer">ATA</a> - Reunião 30/08/2021</li>
@@ -460,15 +467,10 @@
                 <details>
                   <summary>1ª Reunião Ordinária - 20/08/2020</summary>
                   <ul>
-                    <li>1ª Reunião Ordinária - 20/08/2020</li>
-                    <li>2ª Reunião Ordinária - 16/09/2020</li>
-                    <li>3ª Reunião Ordinária - 25/09/2020</li>
-                    <li>4ª Reunião Ordinária - 02/10/2020</li>
-                    <li>5ª Reunião Ordinária - 16/10/2020</li>
-                    <li>6ª Reunião Ordinária - 19/11/2020</li>
-                    <li>7ª Reunião Ordinária - 26/11/2020</li>
-                    <li>8ª Reunião Ordinária - 05/04/2021</li>
-                    <li>9ª Reunião Ordinária - 08/07/2021</li>
+                    <span>PAUTA</span>
+                    <li>Situação Atual do Geoportal</li>
+                    <li>IDE/DF</li>
+                    <li>Proposta de arquitetura GIS compartilhada (Hardware, Softwares, Geoserviços)</li>
                   </ul>
                 </details>
 
@@ -610,7 +612,7 @@
 
   <footer>
     <p>Infraestrutura de Dados Espaciais do Distrito Federal IDE-DF</p>
-    <p>Copyright © 2022 Equipe SEDUH-DF</p>
+    <p>Copyright © 2022 Equipe IDE-DF</p>
 
   </footer>
 
