melhoria no visual da aba inicial

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         </div> <!-- end wrap-inicio  -->
 
         <div class="orgaos-participantes">
-          <p>Órgãos Participantes</p>
+          <div class="hr"></div>
+            <!-- <span>Órgãos Participantes</span> -->
           <div class="wrap-apoio">
             <div class="apoio"> <img src="./assets/logo/caesb.png" alt="CAESB"> </div>
             <div class="apoio"> <img src="./assets/logo/brasilia-ambiental.jpg" alt="BRASÍLIA AMBIENTAL"> </div>
